extend Ctx->Context rename to toolkit-internal identifiers
Second pass of the earlier package/class rename: expands the remaining
~50 'Ctx'-abbreviated local vars, fields, and method names scattered
across Zipper/Selectx/Debloaterx/Bean/Moon/Tunneling toolkit code and
the core builder/solver, e.g. constructCtx -> constructContext,
createCalleeCtx -> createCalleeContext, matchedCtxObjsOfParam ->
matchedContextObjsOfParam, srcCtxt/tgtCtxt -> srcContext/tgtContext,
newHctx -> newHeapContext, isEnforceEmptyCtxForIgnoreTypes ->
isEnforceEmptyContextForIgnoreTypes, and so on -- full list is every
remaining whole-word '*Ctx*' identifier except the Selectx family
(selectx/Selectx/SelectxPTA/...), whose 'ctx' substring is coincidental
(select + x), not an abbreviation of context.

Deliberately excluded unrelated abbreviations living in the same
identifiers (Mthd, Lv, Dep, Nex, Hungarian-notation m/src/tgt prefixes)
-- this pass only expands the specific 'ctx' abbreviation the review
flagged, not a general identifier cleanup.

Caught one real naming collision the rename introduced (renaming
callerCtx to callerContext in HybridObjectContextConstructor shadowed
an existing callerContext local in the same method) via a plain compile
failure; fixed by renaming the inner cast-result variable to
callerContextElements. No other behavior changes. Full test suite green.